RESOLVED FIXED93895
[BlackBerry] Double-tap zoom on blocks on cnn.com desktop page doesn't work
https://bugs.webkit.org/show_bug.cgi?id=93895
Summary [BlackBerry] Double-tap zoom on blocks on cnn.com desktop page doesn't work
Jacky Jiang
Reported 2012-08-13 13:40:47 PDT
PR:188232
Attachments
Patch (4.79 KB, patch)
2012-08-14 08:38 PDT, Jacky Jiang
tonikitoo: review+
Jacky Jiang
Comment 1 2012-08-14 08:38:48 PDT
Jacky Jiang
Comment 2 2012-08-14 10:11:07 PDT
Note You need to log in before you can comment on or make changes to this bug.